# rust-sitemap

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  reader.rs  structs.rs  writer.rs
tests/: test_read_sitemap.rs  test_write_sitemap.rs
tests/documents/: sitemap1.xml
