[package]
name = "sitemap"
version = "0.2.0"
authors = ["Mikhail Svetov <svmk-tmsk@yandex.ru>", "tglman <https://github.com/tglman>"]
description = "Sitemap parser (reader) and writer"
keywords=["sitemap","parser","reader","parse","write sitemap","generate sitemap"]
readme="README.md"
documentation = "https://svmk.github.io/sitemap/0.2.0/sitemap/"
repository = "https://github.com/svmk/rust-sitemap"
license="MIT"
[dependencies]
xml-rs=">=0.3"
url=">=0.5.0"
chrono_utils="0.1.3"
chrono="^0.4"
